# GUARD

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
guard/: __init__.py  config.py
guard/baseline/: __init__.py  compute.py  schema.py  store.py
guard/detectors/: __init__.py  base.py  divergence.py  embedding.py  entropy.py
guard/export/: __init__.py  prometheus.py
guard/temporal/: __init__.py  base.py  cusum.py  page_hinkley.py
tests/: test_baseline_builder.py  test_baseline_store.py  test_config.py  test_contract_smoke.py  test_divergence.py  test_drift_injection.py  test_embedding.py  test_entropy.py  test_export.py  test_temporal.py
